Some minor updates

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Collaboratool
-tagline: Virtualized container for portable, reproducible data science
+tagline: Compute environments for portable, reproducible data science
 # pygments: true
 
 # This is the default format post.
