updated webpages to give user and provisioner instructions; added a "Using BCE" tab to main page in _layouts/default.html; changed overall title in _config.yml, added using-bce.md as the main page of the "Using BCE" tab and using-{virtualbox,ec2}.md as pages with additional info

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: BCE
+title: The Berkeley Computational Environment (BCE)
 tagline: A common compute environment for portable, reproducible data science
 markdown: redcarpet
 pygments: true
