--- a/provisioning/http/ubuntu-14.04/preseed.cfg
+++ b/provisioning/http/ubuntu-14.04/preseed.cfg
@@ -22,6 +22,7 @@ d-i passwd/user-password password oski
 d-i passwd/user-password-again password oski
 d-i passwd/username string oski
 d-i pkgsel/include string openssh-server cryptsetup build-essential libssl-dev libreadline-dev zlib1g-dev linux-source dkms nfs-common
+d-i pkgsel/upgrade select full-upgrade
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select unattended-upgrades
 d-i pkgsel/upgrade select full-upgrade
